<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    tools:context=".DeviceEdit" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name" />

        <EditText
            android:id="@+id/et_edit_task"
            android:hint="@string/app_name" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_status" />

        <TextView
            android:id="@+id/tv_status_device"
            android:hint="@string/app_name"
            android:paddingLeft="5dp" />
    </TableRow>

</TableLayout>