<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference 
        android:key="distance"
        android:title="@string/distance_title"
        android:defaultValue="true"
        />

    
    <ListPreference 
        android:key="timer_default"
        android:title="@string/timer"
        android:defaultValue="15"
        android:entries="@array/default_times_for_timer"
        android:entryValues="@array/default_times_for_timer"
        />
        <ListPreference 
        android:key="temperatureDefault"
        android:title="@string/temperature_config"
        android:defaultValue="20"
        android:entries="@array/default_times_for_temperature"
        android:numeric="integer"
        android:entryValues="@array/default_times_for_temperature"
        />
    
<!--     <ListPreference
        android:dependency="pref_sync"
        android:key="pref_syncConnectionType"
        android:title="@string/pref_syncConnectionType"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/pref_syncConnectionTypes_entries"
        android:entryValues="@array/pref_syncConnectionTypes_values"
        android:defaultValue="@string/pref_syncConnectionTypes_default" /> -->
</PreferenceScreen>