<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edit_device_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_fields"
        android:ems="10"
        android:hint="@string/new_device_name"
        android:maxLength="20" />

    <Button
        android:id="@+id/button_cancel_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit_device_name"
        android:layout_below="@+id/edit_device_name"
        android:layout_marginTop="19dp"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/button_confirm_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_cancel_device"
        android:layout_alignBottom="@+id/button_cancel_device"
        android:layout_alignLeft="@+id/edit_device_name"
        android:text="@string/confirm" />

</RelativeLayout>