<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="4dp"
            android:ems="8"
            android:text="@string/app_name"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/button_edit_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_action_edit"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_status_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:contentDescription="@string/switch_power"
        android:src="@drawable/switch_icon_on_big" />

    <TextView
        android:id="@+id/tv_set_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/timer_config"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_default_times"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/default_times_for_timer" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_set_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_config"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spinner_default_temperatures"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/default_times_for_temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/air_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/air_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginLeft="10dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>