<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/layoutEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_activity_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/child_profile_name"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fields"
                android:ems="10"
                android:hint="@string/child_activity_name"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:textColor="@color/white" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/child_activity_email"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/child_profile_email"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fields"
                android:hint="@string/child_activity_email"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/child_activity_pass"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/child_profile_pass"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fields"
                android:hint="@string/child_activity_pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/require_confirm_pass"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/child_profile_pass_confirm"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_fields"
                android:hint="@string/require_confirm_pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:textColor="@color/white" />
        </LinearLayout>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tv_save"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginBottom="136dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/comportamento_botao"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:shape="rectangle"
            android:text="@string/button_save" />
    </LinearLayout>

</RelativeLayout>